# auto-drawing

./: .gitignore  README.md  SOLIDWORKS_INTERFACE_FINDINGS.md  agent.md  deep-research-report.md  learnings.md  pyproject.toml
.claude/: launch.json
.generated/dimxpert_probe/: sample_dimxpert_probe.SLDPRT
.generated/guideline_drawing/: _save_test.SLDPRT  sample_guideline_attempt.SLDDRW  sample_guideline_attempt.source.SLDPRT  ~$_save_test.SLDPRT
autodrawing/: __init__.py  api.py  contracts.py  dimensions.py  documents.py  engine.py  exporters.py  generate.py  importers.py  models.py  pipeline.py  preview.py  projection.py  scene.py  standards.py  templates.py  view_planner.py  web_cli.py
docs/: fixture-corpus-plan.md
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
guidelines/: 00-sheet-and-title-block.md  01-lines-and-weights.md  02-views-and-projection.md  03-section-detail-broken-auxiliary.md  04-dimensioning.md  05-tolerances-general-and-fits.md  06-gdt.md  07-surface-texture.md  08-welding.md  09-machining-threads.md  10-material-and-heat-treatment.md  11-revisions.md  12-bom.md  13-symbols-and-notation.md  14-edges-and-notes.md  15-sheet-metal-bends.md  CHECKLIST.md  README.md  VERIFICATION_REPORT.md
sample_part/: cube.STEP  disk_r100_t5_hole25.STEP
scripts/: generate_guideline_drawing.py
tests/: test_contracts.py  test_document_commands.py  test_feature_extraction.py  test_importer_pipeline.py  test_preview_api.py  test_techdraw_exact.py  test_view_planner.py
(+43 files in other folders)
